tests/ui/feature-gates/feature-gate-format_args_nl.rs
fn main() {
    format_args_nl!(""); //~ ERROR `format_args_nl` is only for internal language use
}
